--- a/escrow/Cargo.toml
+++ b/escrow/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 solana-program = "1.9.4"
 thiserror = "1.0.24"
-spl-token = {version = "3.2.0", feature = ["no-entrypoint"]}
+spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
 arrayref = "0.3.6"
 
 [lib]
